--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -29,14 +29,14 @@ services:
       - "6379:6379"
   mongo:
     image: "mongo:4.4"
-    restart: always
+    restart: unless-stopped
     ports:
       - "27017:27017"
     volumes:
       - ./init/-scripts/mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
   mongo-express:
     image: "mongo-express:latest"
-    restart: always
+    restart: unless-stopped
     ports:
       - 8081:8081
 
